--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Sciao</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A consequatur cupiditate eum eveniet minus, nostrum officiis soluta sunt. Animi aperiam quae repellat tempore? Architecto ducimus laboriosam, repudiandae sit tempora voluptate?</p>
+    <p>Lore ipsum dolor sit amet, consectetur adipisicing elit. A consequatur cupiditate eum eveniet minus, nostrum officiis soluta sunt. Animi aperiam quae repellat tempore? Architecto ducimus laboriosam, repudiandae sit tempora voluptate?</p>
 </body>
 </html>
