--- a/index.html
+++ b/index.html
@@ -1,13 +1,43 @@
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://kit.fontawesome.com/ad23114c79.js" crossorigin="anonymous"></script>
+    <title>Pando</title>
 </head>
 <body>
-    <h1>Sciao</h1>
-    <p>Lore ipsum dolor sit amet, consectetur adipisicing elit. A consequatur cupiditate eum eveniet minus, nostrum officiis soluta sunt. Animi aperiam quae repellat tempore? Architecto ducimus laboriosam, repudiandae sit tempora voluptate?</p>
+    <div class="container">
+     <ul id="menu">
+            <a class="menu-button icon-plus" href="#menu" title="Show navigation"></a>
+            <a class="menu-button icon-minus" href="#0" title="Hide navigation"></a>
+            <li class="menu-item">
+                <a href="#menu">
+                    <span class="fa fa-github"></span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#menu">
+                    <span class="fa fa-linkedin"></span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#menu">
+                    <span class="fa fa-instagram"></span>
+                </a>
+            </li>
+            <li class="menu-item">
+                <a href="#menu">
+                    <span class="fa fa-twitter"></span>
+                </a>
+            </li>
+        </ul>
+
+  <div class="content">
+    <div class="text">
+      <h3> Click circle!</h3>
+      <h6>Tada...!</h6>
+    </div>
+  </div>
+</div>
 </body>
 </html>
