--- a/index.html
+++ b/index.html
@@ -1,43 +1,32 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" >
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="https://kit.fontawesome.com/ad23114c79.js" crossorigin="anonymous"></script>
     <title>Pando</title>
-</head>
-<body>
-    <div class="container">
-     <ul id="menu">
-            <a class="menu-button icon-plus" href="#menu" title="Show navigation"></a>
-            <a class="menu-button icon-minus" href="#0" title="Hide navigation"></a>
-            <li class="menu-item">
-                <a href="#menu">
-                    <span class="fa fa-github"></span>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="#menu">
-                    <span class="fa fa-linkedin"></span>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="#menu">
-                    <span class="fa fa-instagram"></span>
-                </a>
-            </li>
-            <li class="menu-item">
-                <a href="#menu">
-                    <span class="fa fa-twitter"></span>
-                </a>
-            </li>
-        </ul>
-
-  <div class="content">
-    <div class="text">
-      <h3> Click circle!</h3>
-      <h6>Tada...!</h6>
+    <link rel="stylesheet" href="./style.css">
+</head><body>
+<!---->
+<div class="panda">
+    <div class="body-shadow-1"></div>
+    <div class="body-shadow-2"></div>
+    <div class="body-spot-1"></div>
+    <div class="body-spot-2"></div>
+    <div class="panda__eye--left"></div>
+    <div class="panda__eye--right"></div>
+    <div class="panda__nose"></div>
+    <div class="center-circle">
+        <div class="center-circle__shadow"></div>
     </div>
-  </div>
 </div>
+<div class="ears">
+    <div class="panda__ear--left">
+        <div class="panda__ear--left__shadow"></div>
+    </div>
+    <div class="panda__ear--right">
+        <div class="panda__ear--right__shadow"></div>
+    </div>
+    <div class="bottom-shadow"></div>
+</div>
+<!-- partial -->
 </body>
 </html>
