--- a/index.html
+++ b/index.html
@@ -11,26 +11,28 @@
     <p>Hello</p>
 </div>
 <div class="panda_box">
-    <div class="panda">
-        <div class="body-shadow-1"></div>
-        <div class="body-shadow-2"></div>
-        <div class="body-spot-1"></div>
-        <div class="body-spot-2"></div>
-        <div class="panda__eye--left"></div>
-        <div class="panda__eye--right"></div>
-        <div class="panda__nose"></div>
-        <div class="center-circle">
-            <div class="center-circle__shadow"></div>
+    <div class="panda_square">
+        <div class="panda">
+            <div class="body-shadow-1"></div>
+            <div class="body-shadow-2"></div>
+            <div class="body-spot-1"></div>
+            <div class="body-spot-2"></div>
+            <div class="panda__eye--left"></div>
+            <div class="panda__eye--right"></div>
+            <div class="panda__nose"></div>
+            <div class="center-circle">
+                <div class="center-circle__shadow"></div>
+            </div>
         </div>
-    </div>
-    <div class="ears">
-        <div class="panda__ear--left">
-            <div class="panda__ear--left__shadow"></div>
+        <div class="ears">
+            <div class="panda__ear--left">
+                <div class="panda__ear--left__shadow"></div>
+            </div>
+            <div class="panda__ear--right">
+                <div class="panda__ear--right__shadow"></div>
+            </div>
+            <div class="bottom-shadow"></div>
         </div>
-        <div class="panda__ear--right">
-            <div class="panda__ear--right__shadow"></div>
-        </div>
-        <div class="bottom-shadow"></div>
     </div>
 </div>
 <!-- partial -->
