--- a/index.html
+++ b/index.html
@@ -3,12 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Pando</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/ad23114c79.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <!---->
-<div class="navbar">
-    <p>Hello</p>
+<div>
+    <nav class="navMenu">
+    <a href="https://t.me/pando/">Telegram</a>
+    <a href="https://instagram.com/emanumeme_/">Instagram</a>
+    <a href="https://github.com/Pando13/">GitHub</a>
+    <a href="https://twitter.com/memepando13/">Twitter</a>
+    <div class="dot"></div>
+</nav>
 </div>
 <div class="panda_box">
     <div class="panda_square">
