--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="it" >
 <head>
     <meta charset="UTF-8">
     <title>Pando</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/ad23114c79.js" crossorigin="anonymous"></script>
 </head>
 <body>
