--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navMenu">
     <a href="https://github.com/Pando13/">GitHub</a>
     <a href="https://t.me/pando/">Telegram</a>
-    <a href="https://instagram.com/emanumeme_/">Instagram</a>
+    <a href="https://instagram.com/emanumeme/">Instagram</a>
     <a href="https://twitter.com/memepando13/">Twitter</a>
     <div class="dot"></div>
 </nav>
